--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,6 @@
     ui = true
 [user]
   name = Ben Whaley
-  email = bwhaley@apigee.com
+  email = bwhaley@gmail.com
 [url "git@github.com:"]
   insteadOf = https://github.com/
